@@ -6,3 +6,4 @@
 #undef HAVE_STPCPY
 #undef ENABLE_NLS
 #undef HAVE_PTHREAD_H
+#undef GETTEXT_PACKAGE
