@@ -26,21 +26,6 @@
 #include <sys/stat.h>
 #include <unistd.h>
 
-/* Quick hack so I can mark strings */
-
-#ifdef _ 
-#warning "_ already defined"
-#else
-#define _(x) x
-#endif
-
-#ifdef N_ 
-#warning "N_ already defined"
-#else
-#define N_(x) x
-#endif
-
-
 gchar* 
 gconf_address_backend(const gchar* address)
 {
