@@ -18,22 +18,8 @@
  */
 
 #include "gconf-error.h"
+#include "gconf-internals.h"
 #include <stdarg.h>
-
-/* Quick hack so I can mark strings */
-
-#ifdef _ 
-#warning "_ already defined"
-#else
-#define _(x) x
-#endif
-
-#ifdef N_ 
-#warning "N_ already defined"
-#else
-#define N_(x) x
-#endif
-
 
 static const gchar* err_msgs[] = {
   N_("Success"),
