@@ -37,21 +37,6 @@
 #include <time.h>
 #include <math.h>
 
-
-/* Quick hack so I can mark strings */
-
-#ifdef _ 
-#warning "_ already defined"
-#else
-#define _(x) x
-#endif
-
-#ifdef N_ 
-#warning "N_ already defined"
-#else
-#define N_(x) x
-#endif
-
 static gboolean gconf_daemon_mode = FALSE;
 static gchar* daemon_ior = NULL;
 
