@@ -32,21 +32,6 @@
 #include <errno.h>
 #include <ctype.h>
 
-
-/* Quick hack so I can mark strings */
-
-#ifdef _ 
-#warning "_ already defined"
-#else
-#define _(x) x
-#endif
-
-#ifdef N_ 
-#warning "N_ already defined"
-#else
-#define N_(x) x
-#endif
-
 /* 
  *  Sources
  */
