@@ -27,20 +27,6 @@
 #include <stdlib.h>
 #include <errno.h>
 
-/* Quick hack so I can mark strings */
-
-#ifdef _ 
-#warning "_ already defined"
-#else
-#define _(x) x
-#endif
-
-#ifdef N_ 
-#warning "N_ already defined"
-#else
-#define N_(x) x
-#endif
-
 static int set_mode = FALSE;
 static int get_mode = FALSE;
 static int unset_mode = FALSE;
